--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     "**/*.tsx",
     "pages/sbahn-muc/departures.js",
     ".next/types/**/*.ts"
-, "app/layout.js", "components/core/SearchInput.js"  ],
+, "app/layout.js", "components/core/SearchInput.js", "components/sbahn-muc/BottomBar.js"  ],
   "exclude": [
     "node_modules"
   ]
