--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "init": "^0.1.2",
     "lucide-react": "^0.364.0",
     "next": "^14.1.4",
+    "next-auth": "^5.0.0-beta.17",
     "next-nprogress-bar": "^2.3.5",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
