--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.17",
     "next-nprogress-bar": "^2.3.5",
+    "nextjs-toploader": "^1.6.12",
     "oslo": "^1.2.0",
     "pg": "^8.11.5",
     "react": "^18.3.1",
