--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "next start",
     "lint": "next lint",
     "db:push": "drizzle-kit push:pg",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "code:pretty": "prettier . --write ",
+    "test": "prettier . --write && next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
@@ -22,8 +26,11 @@
     "argon2": "^0.40.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "db-stations": "^5.0.2",
     "drizzle-orm": "^0.30.10",
+    "fuse.js": "^7.0.0",
     "init": "^0.1.2",
     "lucia": "^3.2.0",
     "lucide-react": "^0.364.0",
@@ -40,6 +47,7 @@
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0",
     "zod": "^3.23.5"
   },
   "devDependencies": {
