--- a/package.json
+++ b/package.json
@@ -51,17 +51,21 @@
     "zod": "^3.23.5"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/pg": "^8.11.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "drizzle-kit": "^0.21.1",
     "eslint": "^8",
     "eslint-config-next": "^14.2.3",
-    "postcss": "^8",
+    "postcss": "^8.4.38",
     "prettier": "3.2.5",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
