--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "init": "^0.1.2",
     "lucia": "^3.2.0",
     "lucide-react": "^0.364.0",
+    "maplibre-gl": "^4.3.2",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.17",
     "next-nprogress-bar": "^2.3.5",
