--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "db-hafas": "^6.0.0",
     "db-stations": "^5.0.2",
     "drizzle-orm": "^0.30.10",
     "fuse.js": "^7.0.0",
