--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -26,8 +26,7 @@ jobs:
         cache: 'yarn'
 
     - name: Install dependencies
-      run: yarn install --frozen-lockfile
-
+      run: yarn install && yarn add autoprefixer
     - name: Build the Next.js project
       run: |
         echo "🚀 Starting build..."
