--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -1,4 +1,4 @@
-name: Test Build
+name: Production build
 
 on:
   push:
@@ -27,7 +27,24 @@ jobs:
 
     - name: Install dependencies
       run: yarn install && yarn add autoprefixer
+
     - name: Build the Next.js project
       run: |
         echo "🚀 Starting build..."
         yarn build || (echo "❌ Build failed! Full logs:" && cat .next/output.log && exit 1)
+
+    - name: Log in to GitHub Container Registry
+      if: success()
+      run: echo "${{ secrets.LOGIN_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+    - name: Build Docker image
+      if: success()
+      run: |
+        echo "🐳 Building Docker image..."
+        docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest .
+
+    - name: Push Docker image to Container Registry
+      if: success()
+      run: |
+        echo "📦 Pushing Docker image to GitHub Container Registry..."
+        docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
