--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -47,4 +47,4 @@ jobs:
       if: success()
       run: |
         echo "📦 Pushing Docker image to GitHub Container Registry..."
-        docker push ghcr.io/${{ github.repository_owner }}/innenanzeiger-${{node-version}}:latest
+        docker push ghcr.io/${{ github.repository_owner }}/innenanzeiger:latest
