--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -41,7 +41,7 @@ jobs:
       if: success()
       run: |
         echo "🐳 Building Docker image..."
-        docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest .
+        docker build -t ghcr.io/${{ github.repository_owner }}/innenanzeiger:latest .
 
     - name: Push Docker image to Container Registry
       if: success()
