--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -33,18 +33,19 @@ jobs:
         echo "🚀 Starting build..."
         yarn build || (echo "❌ Build failed! Full logs:" && cat .next/output.log && exit 1)
 
+    # Docker steps will only run for Node.js 22.x
     - name: Log in to GitHub Container Registry
-      if: success()
-      run: echo "${{ secrets.LOGIN_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      if: matrix.node-version == '22.x'
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - name: Build Docker image
-      if: success()
+      if: matrix.node-version == '22.x'
       run: |
         echo "🐳 Building Docker image..."
-        docker build -t ghcr.io/${{ github.repository_owner }}/innenanzeiger:latest .
+        docker build -t ghcr.io/${{ github.repository_owner | toLowerCase() }}/${{ github.repository | toLowerCase() }}:latest .
 
-    - name: Push Docker image to Container Registry
-      if: success()
+    - name: Push Docker image to GHCR
+      if: matrix.node-version == '22.x'
       run: |
         echo "📦 Pushing Docker image to GitHub Container Registry..."
-        docker push ghcr.io/${{ github.repository_owner }}/innenanzeiger:latest
+        docker push ghcr.io/${{ github.repository_owner | toLowerCase() }}/${{ github.repository | toLowerCase() }}:latest
