--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -42,10 +42,12 @@ jobs:
       if: matrix.node-version == '22.x'
       run: |
         echo "🐳 Building Docker image..."
-        docker build -t ghcr.io/${{ github.repository_owner | toLowerCase() }}/${{ github.repository | toLowerCase() }}:latest .
+        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]'):latest
+        docker build -t $IMAGE_NAME .
 
     - name: Push Docker image to GHCR
       if: matrix.node-version == '22.x'
       run: |
+        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]'):latest
         echo "📦 Pushing Docker image to GitHub Container Registry..."
-        docker push ghcr.io/${{ github.repository_owner | toLowerCase() }}/${{ github.repository | toLowerCase() }}:latest
+        docker push $IMAGE_NAME
