--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -36,7 +36,7 @@ jobs:
     # Docker steps will only run for Node.js 22.x
     - name: Log in to GitHub Container Registry
       if: matrix.node-version == '22.x'
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      run: echo "${{ secrets.LOGIN_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - name: Build Docker image
       if: matrix.node-version == '22.x'
