--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "db-stations": "^5.0.2",
+    "fluent-ffmpeg": "^2.1.3",
     "fuse.js": "^7.0.0",
     "init": "^0.1.2",
     "lodash.template": "^4.5.0",
