--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -1,5 +1,3 @@
-name: Production build
-
 on:
   push:
     branches: ['master']
@@ -7,27 +5,46 @@ on:
     branches: ['master']
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [20.x]
 
     steps:
+      # Repository auschecken
       - name: Check out repository
         uses: actions/checkout@v4
 
+      # Node.js setzen
       - name: Set up Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
 
+      # Dependencies installieren
       - name: Install dependencies
         run: yarn install && yarn add autoprefixer
 
+      # Next.js-Projekt bauen
       - name: Build the Next.js project
         run: |
           echo "🚀 Starting build..."
           yarn build || (echo "❌ Build failed! Full logs:" && cat .next/output.log && exit 1)
+
+      # Docker-Login
+      - name: Log in to Docker Registry
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ secrets.DOCKER_REGISTRY }} -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
+      # Docker-Image bauen
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ secrets.DOCKER_REGISTRY }}/innenanzeiger:latest .
+
+      # Docker-Image pushen
+      - name: Push Docker Image
+        run: |
+          docker push ${{ secrets.DOCKER_REGISTRY }}/innenanzeiger:latest
